wreport (2.9-1) UNRELEASED; urgency=low

  * New upstream version
     - Allow to dump data descriptor section without needing to decode the
       rest of the message
     - Implemented support for BUFR C07yyy modifiers
     - Build with new libwibble which already has some of our test utils

 -- Enrico Zini <enrico@debian.org>  Tue, 02 Jul 2013 14:42:16 +0200

wreport (2.8-1) unstable; urgency=low

  * New upstream version
     - Include BUFR tables version 16
  * Updated standards-version, no change required
  * Debhelper compat level bumped to 9, to get hardening flags
  * Switched to multiarch

 -- Enrico Zini <enrico@debian.org>  Thu, 27 Jun 2013 16:27:12 +0200

wreport (2.7-1) UNRELEASED; urgency=low

  * New upstream version
     - Deal with missing associated field significance

 -- Enrico Zini <enrico@debian.org>  Mon, 18 Feb 2013 20:56:25 +0100

wreport (2.6-1) UNRELEASED; urgency=low

  * New upstream version
     - Correctly decode bitmaps in compressed messages
     - Deal with C04 with B31021=21
     - Updated table D000000000980601 after seeing BUFR files which expect a
       different version of it

 -- Enrico Zini <enrico@debian.org>  Mon, 18 Feb 2013 20:56:25 +0100

wreport (2.5-1) UNRELEASED; urgency=low

  * New upstream version 
     - Added wreport::options to configure library behaviour
     - Implemented options::var_silent_domain_errors to silence domain
       errors and just unset the variable when assigning out of range values.

 -- Enrico Zini <enrico@debian.org>  Tue, 05 Jun 2012 15:22:22 +0200

wreport (2.4-1) unstable; urgency=low

  * New upstream version 
     - Added compatibility functions to build on odd systems
  * Updated standards-version, no change required
  * Added Vcs-Svn header
  * Added watchfile

 -- Enrico Zini <enrico@debian.org>  Mon, 14 May 2012 17:32:07 +0200

wreport (2.3-1) unstable; urgency=low

  * New upstream version
     - Improvements to documentation and examples
