@@ -5,6 +5,7 @@ wreport (2.9-1) UNRELEASED; urgency=low
        rest of the message
      - Implemented support for BUFR C07yyy modifiers
      - Build with new libwibble which already has some of our test utils
+     - Added optionally compiled wibble test functions for Var
 
  -- Enrico Zini <enrico@debian.org>  Tue, 02 Jul 2013 14:42:16 +0200
 
